remove unused notebook

--- a/notebook/visualize inference.ipynb
+++ b/notebook/visualize inference.ipynb
@@ -45,7 +45,7 @@
     "norm = Normalize(vmin=0.0, vmax=2.0)\n",
     "\n",
     "import matplotlib.colors\n",
-    "cmap = plt.get_cmap('coolwarm')\n",
+    "cmap = plt.get_cmap('cool')\n",
     "\n",
     "\n",
     "    \n",
@@ -148,7 +148,7 @@
     "\n",
     "chainer.config.remove_stopwords = args['remove_stopwords']\n",
     "\n",
-    "test = DatasetOCR('test')\n",
+    "test = DatasetOCR('test', ocr_type=args['ocr_type'])\n",
     "\n",
     "text_net = args['text_net']\n",
     "if text_net == 'cnn':\n",
@@ -205,10 +205,11 @@
     "    model.to_gpu()\n",
     "\n",
     "results = {}\n",
-    "b_size = 100\n",
+    "b_size = 1\n",
     "\n",
     "with chainer.using_config('train', False), chainer.using_config('test', True), chainer.using_config('enable_backprop', False):\n",
     "    for i in range(0, len(test), b_size):\n",
+    "        i = 74\n",
     "        item = test[i: i + b_size]\n",
     "        img_id = test.images[i:i+b_size]\n",
     "\n",
